syntax = "proto3";
package utils.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/utils2";

import "gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message QueueState {
  message Item {
    bytes key = 1;
    bytes value = 2;
  }

  map<string, Item> items = 1 [ (gogoproto.nullable) = false ];
}
